# DSTK

./: .gitignore  DSTK.py  READEME.md  README.md  py_plot.py  pyproject.toml  test.py
src/DataNova.egg-info/: PKG-INFO
src/datanova/: core.py  test.ipynb
src/dstk/: __init__.py  test.py
src/dstk.egg-info/: PKG-INFO  SOURCES.txt
