[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dstk"                      
version = "0.0.1"                   
description = "A tiny example package (DSTK)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }         
authors = [{ name = "Riley Heiman" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Riley25/DSTK"
Issues = "https://github.com/Riley25/DSTK/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]